--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,21 +1,14 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: wizards-story # Your GitHub organization or username, where this repository lives
+repo: uptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
+  - name: Serveur MC
+    url: play.wizards-story.net
+    port: 25565
     check: "tcp-ping"
-    ipv6: true
+  - name: Serveur de téléchargement
+    url: https://download.wizards-story.net
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
