--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,7 +8,7 @@ sites:
     port: 25565
     check: "tcp-ping"
   - name: Serveur de téléchargement
-    url: https://download.wizards-story.net
+    url: https://download.wizards-story.net/distribution.json
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
